# rs_turn_table

./: CMakeLists.txt  README.md  package.xml
descriptors/analysis_engines/: estimate_plane.xml  record.xml
descriptors/annotators/: MoveTurnTable.xml  SaveClusterCloudsAndImages.xml
src/: MoveTurnTable.cpp  SaveClusterCloudsAndImages.cpp
