<?xml version="1.0"?>
<package>
  <name>rs_turn_table</name>
  <version>0.0.0</version>
  <description>The rs_turn_table package</description>

  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>

  <license>BSD</license>

  <author email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</author> 
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robosherlock</build_depend>
  <build_depend>iai_scanning_table_msgs</build_depend>
  <run_depend>robosherlock</run_depend>
  <run_depend>iai_scanning_table_msgs</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
